# lrr-firmware

./: .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
components.bak/drive_base_driver/: motor_driver.c
components.bak/lidar_driver/: lidar_driver.c
components.bak/socket_mgr/: messages.pb.c  messages.pb.h  messages.proto  socket_mgr.c
components/LSM6DS3_imu_driver/: CMakeLists.txt  LSM6DS3_imu_driver.c
components/communication_stack/: CMakeLists.txt  communication_stack.c
components/communication_stack/socket_manager/: common.cc  common.h  messages.proto  socket_manager.cc  socket_manager.h
components/communication_stack/socket_manager/protobuf_msgs/: messages.pb.c  messages.pb.h
components/communication_stack/wifi_manager/: wifi_manager.cc  wifi_manager.h
components/drive_base_driver/: drive_base_driver.c  motor_driver.c
components/hardware_drivers/: CMakeLists.txt  hardware_driver.h
components/hardware_drivers/battery/: battery_driver.cc  battery_driver.h
components/hardware_drivers/drive_base/: drive_base_driver.cc  drive_base_driver.h  motor_driver.cc  motor_driver.h
components/hardware_drivers/imu/: imu_driver.cc  imu_driver.h
components/hardware_drivers/lidar/: lidar_driver.cc  lidar_driver.h
components/hardware_drivers/status_led/: status_led_driver.cc  status_led_driver.h
components/lidar_driver/: lidar_driver.c
components/socket_mgr/: messages.pb.c  messages.pb.h  messages.proto  pb_utils.c  socket_mgr.c
components/socket_mgr/include/: socket_mgr.h
components/wifi_mgr/: CMakeLists.txt  wifi_mgr.c
docker/: docker-compose.yml  esp_idf.Dockerfile
main/: CMakeLists.txt  lrr_main.c  lrr_main.cc
